update reseacher endpoint added
